🩹 Simple Fix : Json 형식과 html 형식을 받았을 때 데이터 처리법 구분